--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -19,8 +20,22 @@
 
                 <p>Seja bem vindo(a) novamente! Faça login para acessar sua conta e configurar seu ambiente.</p>
 
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-icons">person</span>
+                        <input type="email" name="login" id="ilogin" required placeholder="Seu e-mail" autocomplete="email" maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-icons">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" required placeholder="Sua senha" autocomplete="current-password" minlength="8" maxlength="16">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="Esqueci.html">
+                        Esqueci a senha <span class="material-icons">mail</span>
+                    </a>
+                    
                 </form>
             </div>
         </section>
