--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="Esqueci.html">
+                    <a href="Esqueci.html" class="botao">
                         Esqueci a senha <span class="material-icons">mail</span>
                     </a>
                     
